--- a/StudentInfoSystem/MainWindow.xaml
+++ b/StudentInfoSystem/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StudentInfoSystem"
         mc:Ignorable="d"
-        Title="MainWindow" Height="532.871" Width="832.579">
+        Title="MainWindow" Height="528" Width="1307">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0*"/>
@@ -25,8 +25,8 @@
             </Grid>
 
         </GroupBox>
-        <GroupBox Header="Студентска информация" Margin="0,163,11,76" Grid.ColumnSpan="3" HorizontalAlignment="Right" Width="791">
-            <Grid Margin="0,10,8,5" Grid.ColumnSpan="3">
+        <GroupBox x:Name="studentNameGroupBox" Header="Студентска информация" Margin="0,163,11,76" Grid.ColumnSpan="3" HorizontalAlignment="Right" Width="791">
+            <Grid  Margin="0,10,8,5" Grid.ColumnSpan="3">
                 <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Факултет:" VerticalAlignment="Top" Margin="15,16,0,0" Height="24" Width="70"/>
                 <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Специалност:" VerticalAlignment="Top" Margin="15,51,0,0" Height="23" Width="75" RenderTransformOrigin="0.292,-0.91"/>
                 <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="ОКС:" VerticalAlignment="Top" Margin="15,86,0,0" Height="24" Width="70"/>
@@ -47,6 +47,10 @@
                 <TextBox Text="{Binding Path=SemestralStream}" x:Name="stream" IsReadOnly="True" HorizontalAlignment="Left" Height="20" Margin="564,51,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="165" RenderTransformOrigin="0.321,-0.013"/>
                 <TextBox Text="{Binding Path=SemestralGroup}" x:Name="group" IsReadOnly="True" HorizontalAlignment="Left" Height="20" Margin="564,86,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="165" RenderTransformOrigin="0.321,-0.013"/>
             </Grid>
+        </GroupBox>
+
+        <GroupBox Grid.ColumnSpan="3" Header="Снимка" Height="292" Margin="97,81,894,0" VerticalAlignment="Top">
+            <Image x:Name="studentPicture" Grid.ColumnSpan="3" />
         </GroupBox>
 
 
